<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8FBC8F"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultadoSorteio">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp"
        android:elevation="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/mega_sena"
            android:contentDescription="@string/logoMegaSena" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:text="TextView" />

    <TextView
        android:id="@+id/numerosSugeridos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/numeros_sugeridos" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/resultados" />

    <Button
        android:id="@+id/botaoSortear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_resultado"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="#2E8B57"
        android:layout_gravity="center_horizontal"/>



    <TextView
        android:id="@+id/ultimosSugeridos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/ultimoSugerido" />

    <TextView
        android:id="@+id/ultimoResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/ultimoResultado" />

    <Button
        android:id="@+id/botaoVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#2E8B57"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/botaoSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sair"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#2F4F4F"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>

</ScrollView>